Project

General

Profile

Actions

Bug #51002

closed

regression in ceph daemonperf command output, osd columns aren't visible any more

Added by Igor Fedotov almost 3 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

See the original list of columns from v14.2.11:

------bluefs------- ---------------bluestore--------------- -------------osd------------- prioritycache-0x55c32f47 --------prioritycache:data--------
jlen j wal sst |fl_l ks_l kf_l io_l th_l s_l c_l r_l |ops wr rd l rop rbt |t m u h c |p0 p1 p2 p3 p4 p5 p6 |


Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #51171: octopus: regression in ceph daemonperf command output, osd columns aren't visible any moreResolvedCory SnyderActions
Copied to RADOS - Backport #51172: pacific: regression in ceph daemonperf command output, osd columns aren't visible any moreResolvedCory SnyderActions
Copied to RADOS - Backport #51173: nautilus: regression in ceph daemonperf command output, osd columns aren't visible any moreRejectedActions
Actions #1

Updated by Igor Fedotov almost 3 years ago

  • Status changed from New to Fix Under Review
  • Backport set to pacific, octopus, nautilus
  • Pull request ID set to 41575
Actions #2

Updated by Neha Ojha almost 3 years ago

  • Project changed from Ceph to RADOS
Actions #3

Updated by Igor Fedotov almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51171: octopus: regression in ceph daemonperf command output, osd columns aren't visible any more added
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51172: pacific: regression in ceph daemonperf command output, osd columns aren't visible any more added
Actions #6

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51173: nautilus: regression in ceph daemonperf command output, osd columns aren't visible any more added
Actions #7

Updated by Igor Fedotov about 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF