common/PriorityCache: low perf counters priorities for submodules.

Having too many perf counters with nicknames priorities >= PRIO_INTERESTING spoils daemonperf output and causes no "osd" section there due to presumably too many columns.

Fixes: https://tracker.ceph.com/issues/51002

Signed-off-by: Igor Fedotov <ifedotov@suse.com>